Bug 1617788 - Restore focus in out-of-focus iframe after switching to another app and back even for non-keyboard causes. r=NeilDeakin

Differential Revision: https://phabricator.services.mozilla.com/D67878